Configuracoes Finais
